hphp/hack/test/typecheck/parse_float_with_underscore_bad2.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class BigNumbersRUs {
  const float fp2 = 1._4;
}
